# delsys_trigno_ROS

./: CMakeLists.txt  README.md  package.xml
src/: delsys_emg.py  test_delsys.py
